test/type_errors/cases/sql_badfield.ml
[%%eta.sql.table type t = { tags : string list }]
